--- a/src/component/login/Login.css
+++ b/src/component/login/Login.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 80px;
+    text-shadow: 0 0 2px #000000;
     
 }
 
@@ -18,13 +19,23 @@ button {
     padding: 5px 30px;
 }
 
-.login-wrapper h1, .login-wrapper a, .login-wrapper p {
+.login-wrapper h1, .login-wrapper p {
     color: white;
     font-weight: bold;
-    text-shadow: 0 0 2px #000000;
 }
 
 .error {
     color: red;
-    text-shadow: 0 0 2px #000000;
+}
+a {
+    color:rgb(197, 197, 197);
+    padding: 5px;
+    margin: 0 5px;
+}
+
+a:hover {
+    color: white;
+    padding: 5px;
+    margin: 0 5px;
+    border-bottom: 1px solid white;
 }
