--- a/src/component/login/Login.css
+++ b/src/component/login/Login.css
@@ -1,23 +1,34 @@
 .login-wrapper {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 80px;
+    margin-top: 80px; */
     text-shadow: 0 0 2px #000000;
+    background-color: rgba(75, 68, 175, 0.8);
+    border-radius: 20px;
+    max-width: 600px;
+    padding: 20px;
+    margin: 100px auto;
+    text-align: center;
     
 }
 
-button {
-    margin-left: 15px;
-    margin-top: 10px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    background-color: #5082ce;
+.login-wrapper button {
+    display: inline-block;
     font-size: 15px;
     font-weight: bold;
     color:black;
+    margin: 10px;
     padding: 5px 30px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background-color: #5082ce;
 }
+
+.login-wrapper button:hover{
+    color: #e2e2e2;      
+}
+
 
 .login-wrapper h1, .login-wrapper p {
     color: white;
@@ -27,13 +38,14 @@ button {
 .error {
     color: red;
 }
-a {
+
+.login-wrapper a {
     color:rgb(197, 197, 197);
     padding: 5px;
     margin: 0 5px;
 }
 
-a:hover {
+.login-wrapper a:hover {
     color: white;
     padding: 5px;
     margin: 0 5px;
