--- a/src/component/register/Register.css
+++ b/src/component/register/Register.css
@@ -3,7 +3,7 @@
     border-radius: 20px;
     max-width: 600px;
     padding: 20px;
-    margin: 0 auto;
+    margin: 100px auto;
     text-align: center;
   }
   
@@ -34,7 +34,7 @@
     padding: 5px 30px;
     border: 1px solid #ddd;
     border-radius: 10px;
-    background-color: #50ce61;
+    background-color: #5082ce;
   }
   
   .create button:hover {
