--- a/src/component/login/Login.css
+++ b/src/component/login/Login.css
@@ -51,3 +51,15 @@
     margin: 0 5px;
     border-bottom: 1px solid white;
 }
+
+.login-wrapper input {
+    width: 100%;
+    padding: 6px 0px;
+    margin: 10px 10px;
+    display: inline-block;
+    max-width: 45%;
+    border-radius: 10px;
+    border: 1px solid #ddd;
+    box-shadow: 1px 5px 0px 0px #4964bb;
+    background-color: #a9b4d6;
+}
