--- a/src/component/test/Test.css
+++ b/src/component/test/Test.css
@@ -22,3 +22,15 @@
 .test button:hover {
 color: #e2e2e2;
 }
+
+.test input {
+  width: 100%;
+  padding: 6px 0px;
+  margin: 10px 10px;
+  display: inline-block;
+  max-width: 45%;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  box-shadow: 1px 5px 0px 0px #4964bb;
+  background-color: #a9b4d6;
+}
